#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([jsonxx], [1.0])
AC_CONFIG_SRCDIR([jsonxx.cc])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])

AM_INIT_AUTOMAKE
## 这是在 Autoconf 中使用 Libtool 唯一必须的宏
AC_PROG_LIBTOOL

AC_OUTPUT
