#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([nestPackage], [1.0])
AC_CONFIG_SRCDIR([demo.cc])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])

## 
AM_INIT_AUTOMAKE
AM_PROG_AR
AC_PROG_RANLIB

AC_OUTPUT
